# 3d_quad

./: .gitmodules  CMakeLists.txt  imgui.ini
lib/: CMakeLists.txt
quadcopter_sim/: CMakeLists.txt
quadcopter_sim/controller/pid_cascaded/: controller_parameters.yaml
quadcopter_sim/controller/pid_cascaded/include/: motor_mixing.h
quadcopter_sim/controller/pid_cascaded/src/sub_controllers/: angular_rate_controller.cpp  horizontal_controller.cpp  vertical_controller.cpp
quadcopter_sim/quadcopter/include/: quadcopter.h
quadcopter_sim/quadcopter/src/: description.cpp  dynamics.cpp  euler_integration.cpp  initial_conditions.cpp
quadcopter_sim/quadcopter_plus/: CMakeLists.txt
quadcopter_sim/quadcopter_plus/include/: quadcopter_plus.h
quadcopter_sim/quadcopter_plus/src/: common.cpp  description.cpp  dynamics.cpp  euler_integration.cpp  initial_conditions.cpp  sensing.cpp
quadcopter_sim/quadcopter_sim_app/: CMakeLists.txt
quadcopter_sim/quadcopter_sim_app/include/: include_helper.h  motorcommand_sub_callback.h  paths.h  plot.h  subscriber_variables.h
quadcopter_sim/quadcopter_sim_app/parameters/: initial_conditions.yaml  plot_parameters.yaml  quad_properties.yaml  simulation_parameters.yaml
quadcopter_sim/quadcopter_sim_app/src/: main copy.cpp  main.cpp  main_old.cpp  plot.cpp
quadcopter_sim/quadcopter_x/: CMakeLists.txt
quadcopter_sim/quadcopter_x/include/: quadcopter_x.h
quadcopter_sim/quadcopter_x/src/: common.cpp  description.cpp  dynamics.cpp  euler_integration.cpp  initial_conditions.cpp  sensing.cpp
